--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "install-device-apk": "adb -d install ./android/app/build/outputs/apk/debug/app-debug.apk"
   },
   "dependencies": {
-    "@notifee/react-native": "^9.1.0",
+    "@notifee/react-native": "^9.1.2",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/messaging": "^20.5.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.5",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-callkeep": "^4.3.14",
     "react-native-eventemitter": "^0.0.1",
     "react-native-full-screen-notification-incoming-call": "^1.0.1",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-safe-area-context": "^4.11.1",
+    "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.4.5",
     "react-native-webrtc": "^124.0.4",
